# nambikkai-guardian

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  agent.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/v1/: router.py
apps/api/app/auth/: __init__.py  dependencies.py  errors.py  passwords.py  permissions.py  rate_limit.py  service.py  tokens.py  workspace.py
apps/api/app/chunking/: __init__.py  chunker.py  provenance.py
apps/api/app/citations/: __init__.py  resolver.py  types.py
apps/api/app/db/: session.py
apps/api/app/db/models/: __init__.py  documents.py
apps/api/app/db/repositories/: __init__.py  chunks.py  documents.py  embeddings.py  identity.py
apps/api/app/decision/: __init__.py  policy.py  types.py
apps/api/app/documents/: service.py
apps/api/app/embeddings/: __init__.py  batching.py  provider.py  service.py  testing.py  types.py
apps/api/app/ingestion/: __init__.py  queue.py  scanner.py  worker.py
apps/api/app/language/: __init__.py  detection.py  normalization.py  processor.py  spelling.py  transliteration.py  types.py
apps/api/app/parsing/: __init__.py  ocr.py  pdf.py  text.py  types.py
apps/api/app/rag/: __init__.py  config.py  generation.py  graph.py  retriever.py  service.py  state.py  types.py  verification.py
apps/api/app/retrieval/: service.py  types.py
apps/api/app/routes/: answer.py  auth.py  citations.py  documents.py  health.py
apps/api/app/safety/: __init__.py  detector.py  scanner.py  types.py
apps/api/app/schemas/: __init__.py  answer.py  auth.py  citations.py  documents.py  health.py
apps/api/app/security/: __init__.py  events.py  middleware.py
apps/api/app/storage/: __init__.py  base.py  s3.py
apps/api/app/verification/: __init__.py  entailment.py  extraction.py  signals.py  types.py
apps/api/tests/: injection_corpus.py  test_citation_eval.py  test_citations.py  test_config.py  test_decision_eval.py  test_decision_policy.py  test_embeddings.py  test_health.py  test_injection_detector.py  test_injection_eval.py  test_language.py  test_models.py  test_ocr.py  test_permissions.py  test_rag_eval.py  test_rag_pipeline.py  test_rag_retriever.py  test_rag_service.py  test_retrieval_service.py  test_security_headers.py  test_security_middleware.py  test_verification_entailment.py  test_verification_eval.py  test_verification_signals.py
apps/api/tests/integration/: apptools.py  factories.py  test_answer_api.py  test_auth_api.py  test_citations_api.py  test_embeddings_repository.py  test_ingestion_worker.py  test_migrations.py  test_retrieval.py  test_rls.py  test_security_api.py  test_workspace_routes_direct.py  test_workspaces_api.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/components/: system-state.test.tsx  system-state.tsx
docs/: ARCHITECTURE.md  BACKLOG.md  CONFIGURATION.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  SECURITY.md
infra/: README.md
infra/migrations/: README.md  alembic.ini  env.py
infra/migrations/versions/: 0001_initial_schema.py  0003_row_level_security.py  0006_chunk_token_count.py  0007_chunk_embeddings.py
infra/monitoring/: README.md
services/: README.md
services/ingestion/: README.md
services/retrieval/: README.md
services/safety/: README.md
services/verification/: README.md
tests/: README.md
tests/evaluation/: README.md
tests/integration/: README.md
tests/unit/: README.md
