[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nambikkai-api"
version = "0.1.0"
description = "FastAPI backend for NambikkAI Guardian"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.5,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "redis>=5.0,<6.0",
  "boto3>=1.35,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "langgraph>=0.2,<1.0",
  "structlog>=24.4,<26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "httpx>=0.27,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
