[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[project]
name = "nambikkai-api"
version = "0.1.0"
description = "FastAPI backend for NambikkAI Guardian"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.5,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.11,<2.0",
  "pip-audit>=2.9,<3.0",
  "pre-commit>=4,<5",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.0,<2.0",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "N", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
plugins = ["pydantic.mypy"]
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
