[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[project]
name = "attest-api"
version = "0.1.0"
description = "FastAPI backend for Attest Guardian"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aioboto3>=13.2,<15",
  "alembic>=1.14,<2.0",
  "argon2-cffi>=23.1,<26",
  "asyncpg>=0.30,<1.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  # Pinned to versions clearing the 2026 langgraph/langchain-core advisories
  # (PYSEC-2026-83/2193/2194/2562/2573/1527/2575). Transitive checkpoint/sdk
  # are pinned explicitly so a resolver cannot fall back to a vulnerable build.
  "langchain-core>=1.2.22,<2",
  "langgraph>=1.0.10,<2",
  "langgraph-checkpoint>=4.1.1,<5",
  "langgraph-sdk>=0.3.15,<1",
  "pgvector>=0.3,<0.4",
  "pydantic-settings>=2.5,<3.0",
  "pyjwt>=2.10,<3.0",
  "pillow>=11,<13",
  "pypdf>=5.1,<7",
  "pypdfium2>=4.30,<5",
  "pytesseract>=0.3.13,<0.4",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.18,<0.1",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.11,<2.0",
  "types-aioboto3[s3]>=13.2,<15",
  "pip-audit>=2.9,<3.0",
  "pre-commit>=4,<5",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.0,<2.0",
  "pytest-cov>=5,<7",
  "reportlab>=4.2,<5",
  "ruff>=0.9,<1.0",
]
paddle = [
  "paddleocr>=2.7,<3.0",
  "paddlepaddle>=2.6,<3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "N", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
plugins = ["pydantic.mypy"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "asyncpg",
  "asyncpg.*",
  "docx",
  "docx.*",
  "langgraph.*",
  "pgvector.*",
  "paddleocr",
  "paddleocr.*",
  "pypdfium2",
  "pytesseract",
  "reportlab.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
